fix z-index for carousel controls

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -242,7 +242,7 @@ button {
 
   .controls {
     --control-size: 30px;
-    z-index: 5;
+    z-index: 30;
     bottom: 0;
     right: 5%;
     background: rgba(255, 255, 255, 0.5);
